# cg-course-2021

./: CMakeLists.txt
models/E-45-Aircraft/: E 45 Aircraft_obj.mtl
models/Venator/: export.mtl
models/asteroid1/: asteroid1.mtl
models/deathrow/: DeathRow.mtl
models/fighter/: sci-fi_fighter.mtl
models/mysterious_asteroid/: A2.mtl
models/rocket/: Rocket.mtl
shaders/: crosshair_fragment.glsl  crosshair_vertex.glsl  explosion_fragment.glsl  explosion_geometry.glsl  explosion_vertex.glsl  laser_fragment.glsl  laser_vertex.glsl  particles_geometry.glsl  particles_vertex.glsl  text_fragment.glsl  text_vertex.glsl
shaders/classic/: classic_fragment.glsl  classic_vertex.glsl
shaders/depth/: depth_fragment.glsl  depth_vertex.glsl
shaders/skybox/: skybox_fragment.glsl  skybox_vertex.glsl
src/: BBox.h  Camera.h  Font.cpp  Font.h  Material.h  Model.cpp  Model.h  ModelFactories.cpp  ModelFactories.h  Object.cpp  Object.h  ShaderProgram.cpp  ShaderProgram.h  ShadowMap.cpp  ShadowMap.h  main.cpp
